--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <button type="submit" style="height:35px; width:75px;">Jamie Game</button></form>
 <form action="/quiz">
 <button type="submit" style="height:35px; width:75px;">Jamie Quiz</button></form>
+<form action="/story">
+<button type="submit" style="height:35px; width:75px;">A Story</button></form>
 </center>
 </body>
 
